save local change

--- a/luga_Product/luga_Backend_master/.env
+++ b/luga_Product/luga_Backend_master/.env
@@ -1,11 +1,11 @@
-ELEVEN_LABS_API_KEY=sk_43157d1d2590ee2294e24c737977701cef8c8ed62b7d4c1c
-SYNCLABS_API_KEY=57fafaed-0fa0-4d90-a428-08dfb4a4ee2e
+ELEVEN_LABS_API_KEY=sk_6575e76fdbddf90accbcb000562d39f79d129ed30e95b7cf
+SYNCLABS_API_KEY=sk-XTk0SwmkTvKQZbo3ttPrwA.aeeSIlaf7lPiAGNTVGIaRl1laD0KciB_
 AWS_ACCESS_KEY_ID=AKIAVRUVRZKJWADNRA5Z
 AWS_SECRET_ACCESS_KEY=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
 AWS_S3_BUCKET_NAME=luga-ai
-CLOUDINARY_CLOUD_NAME=ddt70sag5
-CLOUDINARY_API_KEY=783356473971865
-CLOUDINARY_API_SECRET=4VeC8jxULq7kqbgDhNxJvdvXnwU
+CLOUDINARY_CLOUD_NAME=dmcyavflj
+CLOUDINARY_API_KEY=917126258596129
+CLOUDINARY_API_SECRET=t4QzhCtxU19Q602ODpkdSsWYKbs
 OPENAI_API_KEY=sk-proj-ALnMj03DHdpyCz6DGNqXT3BlbkFJDcqjjttUrK9bpEqzpXGV
 MONGO_DB_URL=mongodb://localhost:27017/
 MONGO_DB_NAME=Audio
