--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "luga-frontend",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "module",   
+  "homepage": "https://physical168.github.io/Luga_Product",   
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build", 
+    "deploy": "gh-pages -d dist" 
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
@@ -30,6 +33,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "gh-pages": "^6.3.0",
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
